<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depth_segmentation_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zhenghanlu2020@163.com">alpha</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <depend>image_transport</depend>
  
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <depend>Eigen3</depend>
  <depend>opencv4</depend>
  <depend>gflags</depend>
  <depend>glog</depend>

  <depend>vpp_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
